# leaping

./: .gitignore  LICENSE  README.md  requirements.txt  setup.py
api/: Dockerfile  fly.toml  gpt.py  main.py  requirements.txt  run_api.py
backend/: .env.example  code_matcher.py  code_modifier.py  editor_socket_wrapper.py  error_handlers.py  example.py  github_helper.py  gpt.py  lsp.py  main.py  runscript.py  source_code_analyzer.py  utils.py  web_socket_manager.py
frontend/: README.md  index.html
frontend/src/: App.jsx  main.jsx  theme.js
frontend/src/components/: CodeEditor.jsx  Output.css  Output.jsx  Override.css  Prints.jsx  Socket.jsx
leaping/: setup.py
leaping/src/: leaping.py
pytest-leaping/: .gitignore  README.rst  pyproject.toml  tox.ini
pytest-leaping/src/: gpt.py  leaping_gpt.py  leaping_llm_wrapper.py  leaping_server_wrapper.py  models.py  plugin.py  simpletracer.py
pytest-leaping/tests/: test_leaping.py
src/: leaping.py
testing_assets/: test_file.py
tracing/: conftest.py  gpt.py  models.py  simpletracer.py  systrace.py  test_file.py
