[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-leaping"
description = "A simple plugin to use with pytest"
version = "0.1.3"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Leaping Labs Inc.", email = "founders@leaping.io" },
]
maintainers = [
    { name = "Leaping Labs Inc.", email = "founders@leaping.io" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pytest>=6.2.0",
    "pexpect==4.9.0",
]
[project.urls]
Repository = "https://github.com/leaping/pytest-leaping"
[project.entry-points.pytest11]
django = "plugin"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
